--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@ Happy Birthday, Elon Musk!
           <div class="list-image">
             <div class="image-box">
               <div class="wrap-content-image">
-                <div class="title">Sad Phone Calls</div>
-                <div class="des-image">Totally safe</div>
+                <div class="title">Supply</div>
+                <div class="des-image">1B</div>
               </div>
             </div>
             <div class="image-box">
@@ -111,8 +111,8 @@ Happy Birthday, Elon Musk!
             </div>
             <div class="image-box">
               <div class="wrap-content-image">
-                <div class="title">No Team token</div>
-                <div class="des-image">We not need it</div>
+                <div class="title">Tax</div>
+                <div class="des-image">0%</div>
               </div>
             </div>
             <div class="image-box">
