--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Happy Birthday, Elon Musk!
             <div class="image-box">
               <div class="wrap-content-image">
                 <div class="title">Supply</div>
-                <div class="des-image">1B</div>
+                <div class="des-image">100M</div>
               </div>
             </div>
             <div class="image-box">
@@ -117,8 +117,8 @@ Happy Birthday, Elon Musk!
             </div>
             <div class="image-box">
               <div class="wrap-content-image">
-                <div class="title">LP Lock</div>
-                <div class="des-image">Lock in Pinksale</div>
+                <div class="title">LP </div>
+                <div class="des-image">Burnt</div>
               </div>
             </div>
             
