--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="header"  >
 
       <section class="c-topbar">
-        <div class="btn-group" style="display: flex; flex-direction: row; margin-left: 30%;">
+        <div class="btn-group" style="display: flex; flex-direction: row;">
           <a href="#" class="btn btn-img">
             <img class="statu-1" src="./images/0-0.png">
             <img class="statu-2" src="./images/0-0.png">
