--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
         <div class="wrap-content" style="margin-top: 0">
             <div class="elon-des">
               Join the $MEOWNALISA revolution and surf the wave of innovation. With a sustainable fee mechanism, your investments are set to soar. 🌊📈              <div class="links">
-                <a href="https://x.com/Elon53_Sol"><img src="./images/tw-2.png" alt=""></a> 
-                <a href="https://t.me/Elon_53"><img src="./images/tele2.png" alt=""></a> 
+                <ul class="link-dex">
+                  <li><a href="https://x.com/Elon53_Sol" class="link-dex-item"><img src="./images/twitter.png" alt=""></a></li>
+                  <li><a href="https://t.me/Elon_53" class="link-dex-item"><img src="./images/telegram.png" alt=""></a></li>
+                </ul>
               </div>
             </div>
             <img class="ima-swap" style="border-radius: 30px;" src="./images/0-4.png"></img>
