--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <main class="main">
       <section class="section c-section-1">
-        <div class="wrap-content">
-          <div class="content">
+        <div class="wrap-content" style="margin-top: 90px !important;">
+          <div class="content" style="margin-top: 40px;">
             <img src="./images/0.jpg" width="100%" alt="pepe">
           </div>
           <div class="content">
